# opengl_teaching

./: CMakeLists.txt
src/: BufferObject.cpp  BufferObject.h  CMakeLists.txt  GameClock.h  GlHeaders.h  Shader.cpp  Shader.h  Simulation.cpp  Simulation.h  VertexArrayObject.cpp  VertexArrayObject.h  Window.cpp  Window.h  main.cpp
src/glsl/: frag.glsl  vert.glsl
